--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="qdx.stickyheaderdecoration">
 
-    <!--<application-->
-    <!--android:allowBackup="true"-->
-    <!--android:supportsRtl="true">-->
+    <application
+        android:allowBackup="true"
+        android:supportsRtl="true">
 
-    <!--</application>-->
+    </application>
 
 </manifest>
