--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
+        applicationId "qdx.stickyheaderdecoration"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -24,10 +25,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.3.1'
 
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
 
     compile 'com.android.support:support-v4:25.3.1'
+
+    compile 'com.jakewharton:butterknife:8.6.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
 }
